feat: update portfolio hero image
- Added portfolio-hero-new.png
- Updated portfolio.html to use new hero image

--- a/portfolio.html
+++ b/portfolio.html
@@ -420,7 +420,7 @@
     </header>
 
     <section class="hero hero-ultrawide">
-        <div class="hero-bg" style="background-image: url('portfolio-hero.jpg')">
+        <div class="hero-bg" style="background-image: url('portfolio-hero-new.png')">
         </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
