--- a/portfolio.html
+++ b/portfolio.html
@@ -768,28 +768,37 @@
 
                 const tiktokId = getTikTokId(item.videoUrl);
 
+                // For TikTok, we show the iframe immediately (ready to play)
+                const showIframeImmediately = !!tiktokId;
+
                 return `
                 <article class="portfolio-item ${item.type === 'video' ? 'video' : ''}" data-index="${index}" data-video-url="${item.videoUrl || ''}" data-video-id="${videoId || ''}">
-                    <!-- Thumbnail: Always visible initially -->
-                    <div class="portfolio-item-thumbnail" onclick="handleItemClick(${index})">
+                    <!-- Thumbnail: Hidden if showing iframe immediately -->
+                    <div class="portfolio-item-thumbnail" onclick="handleItemClick(${index})" style="${showIframeImmediately ? 'display:none' : ''}">
                         ${thumbnailUrl ? `<img src="${thumbnailUrl}" alt="${item.title}" class="portfolio-item-media" loading="lazy" ${videoId ? `onerror="this.src='https://img.youtube.com/vi/${videoId}/hqdefault.jpg';"` : ''}>` : ''}
                         <div class="portfolio-item-placeholder" style="${thumbnailUrl ? 'display:none' : ''}">
                             ${item.type === 'video' ? '🎥' : '📷'}
                         </div>
                     </div>
                     
-                    <!-- Inline Video: Hidden initially -->
-                    <div class="portfolio-inline-video" id="inlineVideo${index}" style="display:none;"></div>
+                    <!-- Inline Video: Visible immediately for TikTok -->
+                    <div class="portfolio-inline-video" id="inlineVideo${index}" style="${showIframeImmediately ? 'display:block' : 'display:none;'}">
+                        ${showIframeImmediately ? `<iframe 
+                            src="https://www.tiktok.com/embed/v2/${tiktokId}" 
+                            frameborder="0"
+                            style="width:100%;height:100%;position:absolute;top:0;left:0;"
+                            allowfullscreen></iframe>` : ''}
+                    </div>
 
-                    ${item.type === 'video' ? `<button class="portfolio-expand-btn" onclick="event.stopPropagation(); expandToModal(${index})" title="Expandir" style="display:none;">
+                    ${item.type === 'video' ? `<button class="portfolio-expand-btn" onclick="event.stopPropagation(); expandToModal(${index})" title="Expandir" style="${showIframeImmediately ? 'display:flex' : 'display:none;'}">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <polyline points="15 3 21 3 21 9"/><polyline points="9 21 3 21 3 15"/>
                             <line x1="21" y1="3" x2="14" y2="10"/><line x1="3" y1="21" x2="10" y2="14"/>
                         </svg>
                     </button>` : ''}
                     
-                    <div class="portfolio-item-overlay"></div>
-                    <div class="portfolio-item-content">
+                    <div class="portfolio-item-overlay" style="${showIframeImmediately ? 'display:none' : ''}"></div>
+                    <div class="portfolio-item-content" style="${showIframeImmediately ? 'display:none' : ''}">
                         <h3 class="portfolio-item-title">${item.title}</h3>
                         <p class="portfolio-item-phrase">"${item.phrase}"</p>
                     </div>
