feat: add admin functionality to edit hero images
- Added data-hero-page attributes to index and portfolio hero sections
- Extended media-manager.js to handle 'hero_' image types
- Implemented Admin UI injection for 'EDITAR HERO' button
- Integrated with existing Cloudinary upload service

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Hero with Background 21:9 Ultrawide -->
     <section class="hero hero-ultrawide">
-        <div class="hero-bg"></div>
+        <div class="hero-bg" data-hero-page="index"></div>
         <div class="hero-overlay"></div>
         <div class="hero-dim-overlay" id="heroDimOverlay"></div>
         <div class="hero-content">
