--- a/portfolio.html
+++ b/portfolio.html
@@ -426,7 +426,7 @@
     </header>
 
     <section class="hero hero-ultrawide">
-        <div class="hero-bg" style="background-image: url('portfolio-hero-new.png')">
+        <div class="hero-bg" style="background-image: url('portfolio-hero-new.png')" data-hero-page="portfolio">
         </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
