chore: remove hero section from about page

--- a/sobre.html
+++ b/sobre.html
@@ -72,7 +72,7 @@
 </head>
 
 <body>
-    <header class="header header-hero">
+    <header class="header">
         <div class="header-container">
             <a href="index.html" class="logo logo-elegant">GRACEXPRESS |</a>
             <div class="header-center">
@@ -102,14 +102,7 @@
         </div>
     </header>
 
-    <section class="hero hero-ultrawide">
-        <div class="hero-bg" style="background-image: url('sobre-hero.jpg')">
-        </div>
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-            <h1 class="hero-title-formal" data-i18n="aboutTitle">Sobre Nós</h1>
-        </div>
-    </section>
+
 
     <div class="about-content">
         <h2 class="about-main-title" data-i18n="aboutMainTitle">A Alquimia do Vestir</h2>
