fix: enforce admin on contact page only and upgrade trigger
- Removed Admin link from sobre.html (About page)
- Upgraded Admin link on contato.html (Contact page) to use forceOpenAdmin() script
- Ensures robust access via Contact page while cleaning up other pages as requested

--- a/sobre.html
+++ b/sobre.html
@@ -148,9 +148,7 @@
                             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
                         </svg>
                     </button>
-                    <!-- Admin Link -->
-                    <a href="javascript:void(0)" onclick="openAdminLogin()"
-                        style="color: inherit; opacity: 0.5; font-size: 11px; margin-left: 10px; text-decoration: none; text-transform: uppercase; cursor: pointer;">Admin</a>
+                    <!-- Admin Link Removed -->
                 </div>
             </div>
         </div>
