--- a/contato.html
+++ b/contato.html
@@ -394,14 +394,42 @@
                             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
                         </svg>
                     </button>
-                    <!-- Admin Link -->
-                    <!-- Admin Link -->
-                    <a href="javascript:void(0)" onclick="openAdminLogin()"
-                        style="color: inherit; opacity: 0.5; font-size: 11px; margin-left: 10px; text-decoration: none; text-transform: uppercase; cursor: pointer;">Admin</a>
+                    <!-- Admin Link (Dedicated Contact Trigger) -->
+                    <span role="button" tabindex="0" onclick="forceOpenAdmin(event)"
+                        style="color: inherit; opacity: 0.8; font-size: 13px; margin-left: 15px; font-weight: 700; text-transform: uppercase; cursor: pointer; position: relative; z-index: 2147483647; padding: 15px; display: inline-block; user-select: none; border-bottom: 2px solid transparent;"
+                        onmouseover="this.style.opacity='1'; this.style.borderBottomColor='currentColor'"
+                        onmouseout="this.style.opacity='0.8'; this.style.borderBottomColor='transparent'">
+                        Admin
+                    </span>
                 </div>
             </div>
         </div>
     </footer>
+
+    <!-- Emergency Admin Trigger Script -->
+    <script>
+        function forceOpenAdmin(e) {
+            if (e) e.preventDefault();
+            console.log('Force opening admin modal...');
+            const modal = document.getElementById('adminLoginModal');
+            if (modal) {
+                // Remove any state that might hide it
+                modal.style.display = 'flex';
+                modal.style.visibility = 'visible';
+                modal.style.opacity = '1';
+                modal.style.pointerEvents = 'all';
+                modal.classList.add('active');
+
+                // Focus email input
+                setTimeout(() => {
+                    const emailInput = document.getElementById('adminEmail');
+                    if (emailInput) emailInput.focus();
+                }, 100);
+            } else {
+                alert('Erro crítico: Modal de login não encontrado. Recarregue a página.');
+            }
+        }
+    </script>
 
     <!-- Admin Login Modal -->
     <div id="adminLoginModal" class="admin-modal">
