fix: total synchronization of Admin Editor Mode
- Removed legacy sessionStorage logic in portfolio.html
- Unified auth state to use AuthService (localStorage) globally
- Fixed index.html hero attributes for correct targeting
- Added missing hero-edit-btn styles in styles.css
- Added auto-re-render for portfolio grid when enabling edit mode

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Hero with Background 21:9 Ultrawide -->
     <section class="hero hero-ultrawide">
-        <div class="hero-bg" style="background-image: url('portfolio-hero-new.png')" data-hero-page="portfolio">
+        <div class="hero-bg" style="background-image: url('portfolio-hero-new.png')" data-hero-page="index">
         </div>
         <div class="hero-bg" data-hero-page="index"></div>
         <div class="hero-overlay"></div>
