--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>GraceXpress | Coleção de Tecidos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -46,52 +48,121 @@
         </div>
     </header>
 
-    <!-- Hero with Background 21:9 Ultrawide -->
-    <section class="hero hero-ultrawide">
-        <div class="hero-bg" style="background-image: url('portfolio-hero-new.png')" data-hero-page="index">
+    <!-- Hero - 3-Layer Luxury Layout -->
+    <section class="hero hero-ultrawide hero-3layer" id="heroSection">
+        <div class="hero-bg hero-bg-kenburns" style="background-image: url('hero-main.jpg')" data-hero-page="index">
         </div>
-        <div class="hero-bg" data-hero-page="index"></div>
-        <div class="hero-overlay"></div>
-        <div class="hero-dim-overlay" id="heroDimOverlay"></div>
-        <div class="hero-content">
-            <h1 class="hero-brand-title" id="heroBrandTitle">
-                <span class="brand-main">GRACEX</span><span class="brand-slide" id="brandSlide">PRESS</span>
-            </h1>
-            <p class="hero-rotating-text" id="heroRotatingText">Uma jornada sensorial pela essência do vestuário</p>
-            <a href="#collection" class="hero-cta hero-cta-outlined" data-i18n="heroCta">EXPLORAR O ACERVO</a>
+        <div class="hero-overlay hero-overlay-pearl"></div>
+
+        <!-- 3-Layer Grid Container -->
+        <div class="hero-3layer-grid">
+
+            <!-- CENTER LAYER: Main Focus -->
+            <div class="hero-layer-center">
+
+                <!-- Animated Brand Title with Mask Effect -->
+                <h1 class="hero-brand-title hero-brand-mask" id="heroBrandTitle">
+                    <span class="brand-grace">GRACE</span><span class="brand-x">X</span><span class="brand-press"
+                        id="brandSlide">PRESS</span>
+                </h1>
+
+                <!-- 4 Rotating Texts - Full Width -->
+                <div class="hero-rotating-container hero-rotating-wide">
+                    <p class="hero-rotating-text hero-rotating-luxury active" id="heroRotatingText">Onde a arte têxtil
+                        encontra a Expressão máxima do design contemporâneo.</p>
+                </div>
+
+                <!-- CTA Button - Centered, Wide -->
+                <a href="#collection" class="hero-cta hero-cta-luxury" data-i18n="heroCta">
+                    <span>EXPLORAR O ACERVO</span>
+                    <svg class="cta-arrow" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2">
+                        <path d="M5 12h14M12 5l7 7-7 7" />
+                    </svg>
+                </a>
+            </div>
+
+            <!-- PRESTIGE CARDS: Elegant Mosaic Layout -->
+            <div class="hero-prestige-grid" id="heroParallaxCards">
+                <!-- Featured Card (Larger) -->
+                <div class="hero-prestige-card prestige-featured" data-parallax="0.03" data-float-delay="0">
+                    <div class="prestige-icon">🧵</div>
+                    <div class="prestige-number">+500</div>
+                    <div class="prestige-label">Tecidos Curados</div>
+                </div>
+
+                <!-- Standard Cards -->
+                <div class="hero-prestige-card" data-parallax="0.05" data-float-delay="1">
+                    <div class="prestige-seal">✦</div>
+                    <div class="prestige-text">Edição 2026</div>
+                </div>
+
+                <div class="hero-prestige-card prestige-eco" data-parallax="0.04" data-float-delay="2">
+                    <div class="prestige-icon">🌿</div>
+                    <div class="prestige-text">Origem Sustentável</div>
+                </div>
+
+                <div class="hero-prestige-card prestige-global" data-parallax="0.03" data-float-delay="3">
+                    <div class="prestige-icon">🌍</div>
+                    <div class="prestige-text">Envio Global</div>
+                </div>
+
+                <div class="hero-prestige-card prestige-premium" data-parallax="0.04" data-float-delay="4">
+                    <div class="prestige-pulse"></div>
+                    <div class="prestige-label">Suporte Premium</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- BOTTOM LAYER: Scroll Indicator + Collection Names -->
+        <div class="hero-layer-bottom">
+
+            <div class="hero-scroll-indicator">
+                <span class="scroll-text">SCROLL</span>
+                <div class="scroll-arrow">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 5v14M19 12l-7 7-7-7" />
+                    </svg>
+                </div>
+            </div>
+
+
         </div>
     </section>
 
-    <!-- Search Bar -->
-    <div class="search-bar" id="searchBar">
-        <div class="search-container">
-            <svg class="search-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                stroke-width="2">
-                <circle cx="11" cy="11" r="8" />
-                <path d="M21 21l-4.35-4.35" />
-            </svg>
-            <input type="text" id="searchInput" placeholder="Pesquisar tecidos..." autocomplete="off"
-                data-i18n-placeholder="searchPlaceholder">
-            <button class="search-clear-btn" id="searchClearBtn" type="button" aria-label="Limpar busca">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M18 6L6 18M6 6l12 12" />
-                </svg>
-            </button>
-            <span class="search-count" id="searchCount">120 tecidos</span>
-        </div>
-        <!-- Mobile Filter Toggle Button -->
-        <button class="mobile-filter-btn" id="mobileFilterBtn" aria-label="Filtros">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
-            </svg>
-            <span data-i18n="filterBtn">Filtros</span>
-        </button>
-    </div>
+    <!-- Mobile Filter Toggle Button (floating) -->
+    <button class="mobile-filter-btn" id="mobileFilterBtn" aria-label="Filtros">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+        </svg>
+        <span data-i18n="filterBtn">Filtros</span>
+    </button>
+
 
     <!-- Main Content -->
     <main class="main-content" id="collection">
-        <!-- Filters Sidebar -->
-        <aside class="filters-sidebar">
+        <!-- Filters Sidebar (Sticky) -->
+        <aside class="filters-sidebar filters-sidebar-sticky">
+            <!-- Search in Sidebar -->
+            <div class="sidebar-search">
+                <div class="sidebar-search-container">
+                    <svg class="search-icon" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2">
+                        <circle cx="11" cy="11" r="8" />
+                        <path d="M21 21l-4.35-4.35" />
+                    </svg>
+                    <input type="text" id="searchInput" placeholder="Pesquisar tecidos..." autocomplete="off"
+                        data-i18n-placeholder="searchPlaceholder">
+                    <button class="sidebar-search-clear" id="searchClearBtn" type="button" aria-label="Limpar busca">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M18 6L6 18M6 6l12 12" />
+                        </svg>
+                    </button>
+                </div>
+                <span class="search-count" id="searchCount">120 tecidos</span>
+            </div>
+
             <div class="filter-section">
                 <h3 class="filter-title" data-i18n="filterTitle">Filtrar por Tipo</h3>
                 <div class="filter-options">
