--- a/portfolio.html
+++ b/portfolio.html
@@ -425,15 +425,482 @@
         </div>
     </header>
 
-    <section class="hero hero-ultrawide">
+    <section class="hero hero-ultrawide hero-editorial">
         <div class="hero-bg" style="background-image: url('portfolio-hero-new.png')" data-hero-page="portfolio">
         </div>
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-            <h1 class="hero-title-formal" data-i18n="portfolioTitle">Meu Portfólio</h1>
+        <div class="hero-overlay hero-overlay-editorial"></div>
+
+        <!-- Two Column Layout -->
+        <div class="hero-grid">
+            <!-- Left Column: Text Content -->
+            <div class="hero-col-text">
+                <!-- Top Header Bar -->
+                <div class="hero-header-bar">
+                    <span class="hero-header-title">ACERVO TÊXTIL DIGITAL</span>
+                    <span class="hero-header-divider">|</span>
+                    <span class="hero-header-subtitle">BIBLIOTECA DE PESQUISA</span>
+                </div>
+
+                <!-- Overline -->
+                <span class="hero-overline">ESTÉTICA TÊXTIL DE LUXO</span>
+
+                <!-- Main Title - Giant Typography -->
+                <h1 class="hero-title-editorial">
+                    Onde a arte encontra
+                    <br>a <span class="hero-word-highlight">
+                        <span class="hero-word-carousel">
+                            <span class="hero-word-track">
+                                <span class="hero-word">Inovação.</span>
+                                <span class="hero-word">Curadoria.</span>
+                                <span class="hero-word">Excelência.</span>
+                                <span class="hero-word">Expressão.</span>
+                            </span>
+                        </span>
+                    </span>
+                </h1>
+
+                <!-- Vertical Divider Line -->
+                <div class="hero-vertical-line"></div>
+
+                <!-- Descriptive Caption -->
+                <p class="hero-caption-editorial">
+                    Um ecossistema digital exclusivo para designers e curadores.
+                    Transformando a pesquisa de materiais em uma experiência sensorial e tecnológica de alto luxo.
+                </p>
+
+
+            </div>
+
+            <!-- Right Column: Floating Badges -->
+            <div class="hero-col-visual">
+                <div class="hero-floating-badges">
+                    <div class="hero-badge hero-badge-primary">
+                        <span class="badge-number">+500</span>
+                        <span class="badge-label">Tecidos Curados</span>
+                    </div>
+                    <div class="hero-badge hero-badge-edition">
+                        <span class="badge-text">Edição 2026</span>
+                    </div>
+                    <div class="hero-badge hero-badge-members">
+                        <span class="badge-icon">✦</span>
+                        <span class="badge-label">Disponível para Membros</span>
+                    </div>
+                </div>
+            </div>
         </div>
 
+        <!-- Scroll Indicator -->
+        <div class="hero-scroll-indicator">
+            <span class="scroll-text">SCROLL</span>
+            <div class="scroll-arrow">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M12 5v14M19 12l-7 7-7-7" />
+                </svg>
+            </div>
+        </div>
     </section>
+
+    <style>
+        /* ==========================================
+           EDITORIAL HERO - TWO COLUMN LAYOUT
+           ========================================== */
+
+        .hero-editorial {
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero-overlay-editorial {
+            background: linear-gradient(to right,
+                    rgba(255, 255, 255, 0.95) 0%,
+                    rgba(255, 255, 255, 0.85) 40%,
+                    rgba(255, 255, 255, 0.3) 70%,
+                    rgba(255, 255, 255, 0) 100%);
+        }
+
+        [data-theme="dark"] .hero-overlay-editorial {
+            background: linear-gradient(to right,
+                    rgba(0, 0, 0, 0.95) 0%,
+                    rgba(0, 0, 0, 0.85) 40%,
+                    rgba(0, 0, 0, 0.3) 70%,
+                    rgba(0, 0, 0, 0) 100%);
+        }
+
+        .hero-grid {
+            position: relative;
+            z-index: 5;
+            display: grid;
+            grid-template-columns: 55% 45%;
+            width: 100%;
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 120px 60px 80px;
+            min-height: 100vh;
+            align-items: center;
+        }
+
+        .hero-col-text {
+            padding-right: 60px;
+        }
+
+        .hero-header-bar {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            margin-bottom: 40px;
+            font-family: 'Inter', sans-serif;
+            font-size: 11px;
+            font-weight: 500;
+            letter-spacing: 0.2em;
+            color: var(--color-text-secondary);
+        }
+
+        .hero-header-divider {
+            opacity: 0.4;
+        }
+
+        .hero-overline {
+            display: inline-block;
+            font-family: 'Inter', sans-serif;
+            font-size: 11px;
+            font-weight: 600;
+            letter-spacing: 0.25em;
+            color: #3b82f6;
+            text-transform: uppercase;
+            margin-bottom: 24px;
+            padding: 8px 16px;
+            background: rgba(59, 130, 246, 0.1);
+            border-radius: 4px;
+        }
+
+        .hero-title-editorial {
+            font-family: 'Playfair Display', 'Georgia', serif;
+            font-size: clamp(2.8rem, 5.5vw, 4.5rem);
+            font-weight: 400;
+            line-height: 1.15;
+            color: var(--color-text);
+            margin-bottom: 32px;
+        }
+
+        .hero-word-highlight {
+            display: inline-block;
+            position: relative;
+        }
+
+        .hero-word-carousel {
+            display: inline-block;
+            height: 1.15em;
+            overflow: hidden;
+            vertical-align: bottom;
+        }
+
+        .hero-word-track {
+            display: flex;
+            flex-direction: column;
+            animation: wordRoll 10s cubic-bezier(0.76, 0, 0.24, 1) infinite;
+        }
+
+        .hero-word {
+            display: block;
+            height: 1.15em;
+            line-height: 1.15;
+            color: #3b82f6;
+            font-style: italic;
+            font-weight: 500;
+            font-size: 1.1em;
+        }
+
+        [data-theme="dark"] .hero-word {
+            color: #60a5fa;
+        }
+
+        @keyframes wordRoll {
+
+            0%,
+            18% {
+                transform: translateY(0);
+            }
+
+            23%,
+            43% {
+                transform: translateY(-25%);
+            }
+
+            48%,
+            68% {
+                transform: translateY(-50%);
+            }
+
+            73%,
+            93% {
+                transform: translateY(-75%);
+            }
+
+            98%,
+            100% {
+                transform: translateY(0);
+            }
+        }
+
+        .hero-vertical-line {
+            width: 60px;
+            height: 3px;
+            background: linear-gradient(90deg, #3b82f6, transparent);
+            margin-bottom: 24px;
+            border-radius: 2px;
+        }
+
+        .hero-caption-editorial {
+            font-family: 'Inter', sans-serif;
+            font-size: 17px;
+            line-height: 1.8;
+            color: var(--color-text-secondary);
+            max-width: 480px;
+            margin-bottom: 40px;
+        }
+
+        .hero-cta-group {
+            display: flex;
+            gap: 16px;
+            align-items: center;
+        }
+
+        .hero-cta-primary {
+            display: inline-flex;
+            align-items: center;
+            gap: 12px;
+            padding: 18px 32px;
+            background: linear-gradient(135deg, #3b82f6 0%, #1d4ed8 100%);
+            color: #fff;
+            font-family: 'Inter', sans-serif;
+            font-size: 14px;
+            font-weight: 600;
+            letter-spacing: 0.02em;
+            text-decoration: none;
+            border-radius: 50px;
+            transition: all 0.3s ease;
+            box-shadow: 0 8px 30px rgba(59, 130, 246, 0.35);
+        }
+
+        .hero-cta-primary:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 12px 40px rgba(59, 130, 246, 0.45);
+        }
+
+        .hero-cta-primary svg {
+            transition: transform 0.3s ease;
+        }
+
+        .hero-cta-primary:hover svg {
+            transform: translateX(5px);
+        }
+
+        .hero-cta-secondary {
+            display: inline-flex;
+            align-items: center;
+            padding: 18px 32px;
+            background: transparent;
+            color: var(--color-text);
+            font-family: 'Inter', sans-serif;
+            font-size: 14px;
+            font-weight: 500;
+            text-decoration: none;
+            border: 1.5px solid var(--color-border);
+            border-radius: 50px;
+            transition: all 0.3s ease;
+        }
+
+        .hero-cta-secondary:hover {
+            background: var(--color-text);
+            color: var(--color-bg);
+            border-color: var(--color-text);
+        }
+
+        .hero-col-visual {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            padding-right: 40px;
+        }
+
+        .hero-floating-badges {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .hero-badge {
+            background: rgba(255, 255, 255, 0.85);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            padding: 16px 24px;
+            border-radius: 12px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+            animation: floatBadge 3s ease-in-out infinite;
+        }
+
+        [data-theme="dark"] .hero-badge {
+            background: rgba(30, 30, 30, 0.85);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .hero-badge-primary {
+            animation-delay: 0s;
+        }
+
+        .hero-badge-edition {
+            animation-delay: 0.5s;
+            align-self: flex-end;
+        }
+
+        .hero-badge-members {
+            animation-delay: 1s;
+            flex-direction: row;
+            align-items: center;
+            gap: 10px;
+        }
+
+        @keyframes floatBadge {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-8px);
+            }
+        }
+
+        .badge-number {
+            font-family: 'Playfair Display', serif;
+            font-size: 32px;
+            font-weight: 600;
+            color: #3b82f6;
+        }
+
+        .badge-label {
+            font-family: 'Inter', sans-serif;
+            font-size: 12px;
+            font-weight: 500;
+            color: var(--color-text-secondary);
+            letter-spacing: 0.05em;
+        }
+
+        .badge-text {
+            font-family: 'Inter', sans-serif;
+            font-size: 13px;
+            font-weight: 600;
+            color: var(--color-text);
+            letter-spacing: 0.1em;
+        }
+
+        .badge-icon {
+            font-size: 16px;
+            color: #f59e0b;
+        }
+
+        .hero-scroll-indicator {
+            position: absolute;
+            bottom: 40px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 8px;
+            z-index: 10;
+            animation: pulseScroll 2s ease-in-out infinite;
+        }
+
+        @keyframes pulseScroll {
+
+            0%,
+            100% {
+                opacity: 1;
+                transform: translateX(-50%) translateY(0);
+            }
+
+            50% {
+                opacity: 0.6;
+                transform: translateX(-50%) translateY(5px);
+            }
+        }
+
+        .scroll-text {
+            font-family: 'Inter', sans-serif;
+            font-size: 10px;
+            font-weight: 600;
+            letter-spacing: 0.2em;
+            color: var(--color-text-secondary);
+        }
+
+        .scroll-arrow svg {
+            opacity: 0.6;
+        }
+
+        @media (max-width: 1024px) {
+            .hero-grid {
+                grid-template-columns: 1fr;
+                padding: 100px 32px 80px;
+                text-align: center;
+            }
+
+            .hero-col-text {
+                padding-right: 0;
+            }
+
+            .hero-header-bar {
+                justify-content: center;
+            }
+
+            .hero-vertical-line {
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .hero-caption-editorial {
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .hero-cta-group {
+                justify-content: center;
+                flex-wrap: wrap;
+            }
+
+            .hero-col-visual {
+                display: none;
+            }
+
+            .hero-overlay-editorial {
+                background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.7) 50%, rgba(255, 255, 255, 0.5) 100%);
+            }
+
+            [data-theme="dark"] .hero-overlay-editorial {
+                background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.7) 50%, rgba(0, 0, 0, 0.5) 100%);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .hero-title-editorial {
+                font-size: clamp(2rem, 8vw, 3rem);
+            }
+
+            .hero-cta-primary,
+            .hero-cta-secondary {
+                padding: 14px 24px;
+                font-size: 13px;
+            }
+        }
+    </style>
 
     <div class="portfolio-grid" id="portfolioGrid">
         <!-- Items will be rendered by JavaScript -->
