--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="js/force-admin.js"></script>
     <style>
         /* ==========================================
            FLUID RESPONSIVE CSS - No Fixed Dimensions
@@ -432,8 +433,8 @@
     </script>
 
     <!-- Admin Login Modal -->
-    <div id="adminLoginModal" class="admin-modal">
-        <div class="admin-modal-content">
+    <div id="adminLoginModal" class="admin-modal" onclick="if(event.target === this) closeAdminLogin()">
+        <div class="admin-modal-content" onclick="event.stopPropagation()">
             <span class="admin-close" onclick="closeAdminLogin()">&times;</span>
             <h3>Acesso Administrativo</h3>
             <form id="adminLoginForm" onsubmit="handleAdminLogin(event)">
