--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="js/force-admin.js"></script>
     <style>
         .page-hero {
             height: 50vh;
@@ -977,8 +978,8 @@
     </div>
 
     <!-- Admin Login Modal -->
-    <div id="adminLoginModal" class="admin-modal">
-        <div class="admin-modal-content">
+    <div id="adminLoginModal" class="admin-modal" onclick="if(event.target === this) closeAdminLogin()">
+        <div class="admin-modal-content" onclick="event.stopPropagation()">
             <span class="admin-close" onclick="closeAdminLogin()">&times;</span>
             <h3>Acesso Administrativo</h3>
             <form id="adminLoginForm" onsubmit="handleAdminLogin(event)">
